# Framework

./: .gitmodules  CMakeLists.txt  README.md
app/Entities/include/: AssetManager.h  GameEntity.h  Texture.h
app/Entities/src/: AssetManager.cpp  GameEntity.cpp  Texture.cpp
app/GameManager/include/: GameManager.h
app/GameManager/src/: GameManager.cpp
app/Graphics/include/: Graphics.h
app/Graphics/src/: Graphics.cpp
app/Helpers/include/: MathHelper.h
app/Timer/include/: Timer.h
app/Timer/src/: Timer.cpp
app/main/: main.cpp
